# aiindex

./: .env.example  .gitignore  Dockerfile  Justfile  stocks.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  docker-build.yml
k8s/: aiindex-deployment.yaml
pwa/: index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
pwa/src/: App.svelte  app.css
pwa/src/lib/: api.js
pwa/src/lib/components/: IndexBanner.svelte  IndexChart.svelte  SectorBreakdown.svelte  StockTable.svelte
pwa/src/lib/components/chart/: AxisX.svelte  AxisY.svelte  BenchmarkLines.svelte  Line.svelte  Tooltip.svelte
server/: Cargo.toml
server/src/: config.rs  db.rs  fetcher.rs  index.rs  main.rs  models.rs  routes.rs
